convert select to mat-select - change theme from light to dark so select options are visible - add BrowserAnimationsModule to app module - add mat select and mat form field modules to ui module - add mat-form-field and mat-select and style for changes - prepare icon for later - add min with for icon holder in select and tag list to avoid oval

--- a/apps/polpo-classroom-web/src/theme-angular-material.scss
+++ b/apps/polpo-classroom-web/src/theme-angular-material.scss
@@ -71,4 +71,4 @@ $mat-polpo-warn: $mat-red;
 $polpo-primary: mat-palette($mat-polpo-primary);
 $polpo-accent: mat-palette($mat-polpo-accent, 500, 900, A100);
 $polpo-warn: mat-palette($mat-deep-orange);
-$polpo-theme: mat-dark-theme($polpo-primary, $polpo-accent, $polpo-warn);
+$polpo-theme: mat-light-theme($polpo-primary, $polpo-accent, $polpo-warn);
